added fork config for surefire