@@ -41,6 +41,16 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-surefire-plugin</artifactId>
+	      <version>2.19.1</version>
+	      <configuration>
+		<forkCount>1</forkCount>
+		<reuseForks>true</reuseForks>
+		<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
+	      </configuration>
+	    </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
